# FundusSegmenter

./: .gitignore  pyproject.toml
.github/workflows/: publish-to-auto-release.yml
configs/: fundus.yaml
notebooks/: data.py  experiment.ipynb  train_utils.py
notebooks/onnx/: export.ipynb
src/multistyleseg/: utils.py
src/multistyleseg/analysis/: evaluation_toolkit.py  io.py  utils.py
src/multistyleseg/analysis/dr_grading/: consts.py  eval.py  export.py  hmr_diagnosis.py  models.py  plot.py  utils.py
src/multistyleseg/charts/: consts.py  detection_plot.py  parallel_plot.py  segmentation_plot.py
src/multistyleseg/data/fundus/: consts.py  factory.py  utils.py
src/multistyleseg/data/synthetic/: __init__.py  generator.py  utils.py
src/multistyleseg/experiments/fundus/: CNN_DR_grading.ipynb  DR_screening.ipynb  baseline_setup.py  dr_grading_pipeline.json  dr_screening_pipeline.json  ensemble.py  train_baseline.py  train_fundus.py  (+1 more)
src/multistyleseg/models/: factory.py  test_models.py
src/multistyleseg/trainers/: fundus.py  measure.py  test_measure.py
ui/FundusSegmenter/: README.md  angular.json  package-lock.json  package.json  tailwind.config.js
ui/FundusSegmenter/src/: index.html  styles.scss
ui/FundusSegmenter/src-tauri/: Cargo.toml  tauri.conf.json
ui/FundusSegmenter/src-tauri/capabilities/: default.json
ui/FundusSegmenter/src-tauri/src/: lib.rs
ui/FundusSegmenter/src-tauri/src/dl/: inference.rs  mod.rs  model_manager.rs  model_path.rs  postprocess.rs
ui/FundusSegmenter/src-tauri/src/utils/: image.rs  io.rs  mod.rs
(+65 files in other folders)
