[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2.6.0"
base64 = "0.22.1"
tokio = "1.50.0"
ort = { version = "2.0.0-rc.12", features = ["cuda"] }
ndarray = "0.17.2"
image = "0.25.6"
mutex = "1.0.2"
imageproc = "0.25.0"
reqwest = {version="0.13.2", features = ["stream"] }
futures-util = "0.3.32"
